{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "Player",
            "id": "b64c3587-0a27-41b6-9730-49c3c8ffcf3d",
            "actions": [
                {
                    "name": "Hotbar1",
                    "type": "PassThrough",
                    "id": "e03b0f52-18a1-4068-ab68-9d4ba7b95f20",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hotbar2",
                    "type": "PassThrough",
                    "id": "aea34372-48a9-48ef-973c-e8e819b67d11",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hotbar3",
                    "type": "PassThrough",
                    "id": "e2b27db8-8570-470c-b209-e8760e8944f4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hotbar4",
                    "type": "PassThrough",
                    "id": "649a155f-ecaf-40f5-98b6-b2eab938e997",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hotbar5",
                    "type": "PassThrough",
                    "id": "d8a72c49-da38-4ad0-bea2-be2b2b5650da",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hotbar6",
                    "type": "PassThrough",
                    "id": "4a8e0fb3-15cd-461e-a248-ca0b28cfad9c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hotbar7",
                    "type": "Value",
                    "id": "3e82891c-97ee-4b6a-a5c4-6e253b4df95c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Hotbar8",
                    "type": "Button",
                    "id": "32547594-fb32-42b3-ae0b-f0dee885e03c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hotbar9",
                    "type": "Value",
                    "id": "74e925ce-6326-4721-a6fb-15000897a5cd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseWheel",
                    "type": "PassThrough",
                    "id": "0412c7d6-2664-4008-b9c6-d7cec81f05d0",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseItem",
                    "type": "Button",
                    "id": "570100ed-105d-4d2a-828c-6ebb67c56192",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "60e010ee-1b0a-418b-b21f-6758b9853c63",
                    "path": "<Keyboard>/1",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Hotbar1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a6ba8102-31aa-495a-bed1-ba46e4644ad8",
                    "path": "<Keyboard>/2",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Hotbar2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d72ccc2b-d12e-48d8-bc36-bb6552aa1b0f",
                    "path": "<Keyboard>/3",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Hotbar3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e3e4cff6-cab8-4573-95c6-cd8f544951fb",
                    "path": "<Keyboard>/4",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Hotbar4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d8bb0c76-6dc5-4e7c-9f1c-cd2f22a5f802",
                    "path": "<Keyboard>/5",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Hotbar5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cfc8ba16-9a33-46ef-8e66-19ca38315ca4",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "efcf2d18-0943-43c0-9511-639b1fee8a18",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "UseItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c02573b-99de-4894-9c38-fae7b1f3b009",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hotbar6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ef9d84f-0de6-44cb-833d-40cd5e1c2c69",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hotbar7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "967ab31f-6afc-4cff-84ca-549a8025f341",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hotbar8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f55440b-a30e-4c58-bb7b-ec485ad38a5b",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hotbar9",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}